# fin-planner

./: README.md  docker-compose.yml  fin-planner.sln  fluent-bit.yml  otel-config.yaml
budget/: Dockerfile  alembic.ini  conftest.py  hello.py  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt
budget/alembic/: env.py
budget/alembic/versions/: 0188a281b05b_init.py  a9c200e913cb_work_on_budget_tables.py  d36db6ac0d4f_add_favicon_to_category.py
budget/app/: main.py
budget/app/application/dependencies/: __init__.py  core.py
budget/app/application/services/: __init__.py  budget_service.py  categories_service.py
budget/app/configs/: categories_init.py
budget/app/core/: config.py  logging.py
budget/app/dependencies/: core.py  database.py
budget/app/domain/: exceptions.py
budget/app/domain/configs/: __init__.py  categories_init.py  config.py
budget/app/domain/ports/: __init__.py  repository.py  specification.py
budget/app/domain/schemas/: __init__.py  budget.py  category.py  filter_params.py  pagination.py  user.py
budget/app/domain/specifications/: __init__.py  author_spec.py
budget/app/infrastructure/: __init__.py  dependency.py
budget/app/models/: budget.py  category.py
budget/app/routers/: budget.py  budgets.py  categories.py  health.py
budget/app/services/: auth.py  budget_service.py  categories_service.py
budget/app/strategies/: base_strategy.py  envelope_strategy.py  percentage_strategy.py
budget/app/tests/: conftest.py  test_auth.py  test_categories_service.py
budget/app/utils/: init_db.py
(+44 files in other folders)
